@@ -709,6 +709,26 @@
 			  <property name="fill">False</property>
 			</packing>
 		      </child>
+
+		      <child>
+			<widget class="GtkCheckButton" id="checkbutton_url">
+			  <property name="visible">True</property>
+			  <property name="tooltip" translatable="yes">This option tell GGMud to display URLs as underlined clickable references in your output window.</property>
+			  <property name="can_focus">True</property>
+			  <property name="label" translatable="yes">Show clickable URLs</property>
+			  <property name="use_underline">True</property>
+			  <property name="relief">GTK_RELIEF_NORMAL</property>
+			  <property name="focus_on_click">True</property>
+			  <property name="active">True</property>
+			  <property name="inconsistent">False</property>
+			  <property name="draw_indicator">True</property>
+			</widget>
+			<packing>
+			  <property name="padding">0</property>
+			  <property name="expand">False</property>
+			  <property name="fill">False</property>
+			</packing>
+		      </child>
 		    </widget>
 		  </child>
 
